source: Updates for reveal.js 3.1.0
Signed-off-by: Alan Orth <alan.orth@gmail.com>

--- a/source/title.html
+++ b/source/title.html
@@ -1,6 +1,6 @@
 <section data-markdown>
     <script type="text/template">
-        # HPC Users Group
+        ## HPC Users Group
         *Creating a community around research computing at ILRI*
 
         <img src="img/linux.png" style="height: 166px; border: none; background: none; box-shadow: none;">
