Updates for reveal.js 3.1.0
3.1.0 uses different margins than previous versions so we need to
adjust headings and stuff to be less big, which is probably a good
idea anyways.

Signed-off-by: Alan Orth <alan.orth@gmail.com>

--- a/source/10GbE.html
+++ b/source/10GbE.html
@@ -10,7 +10,7 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            ## It's faster
+            ### It's faster
 
             <img src="img/nutshell.jpg" style="width: 500px; border: none; background: none; box-shadow: none;">
 
@@ -19,9 +19,9 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            ## Roughly ten times faster
+            ### Roughly ten times faster
 
-            <img src="img/bw-graph.gif" style="width: 600px; border: none; background: none; box-shadow: none;">
+            <img src="img/bw-graph.gif" style="width: 500px; border: none; background: none; box-shadow: none;">
 
             Bandwidth graph during blastn against WGS (peak throughput 720MB/sec)
         </script>
