--- a/source/io-bound.html
+++ b/source/io-bound.html
@@ -10,7 +10,7 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            ## Programs which are generally I/O bound
+            ### Programs which are generally I/O bound
 
             <br/>
             BLAST, Trinity, Bowtie, ???
@@ -18,15 +18,13 @@
     </section>
     <section data-markdown>
         <script type="text/template">
-            ## Things you can do to speed up an I/O-bound program
+            ### Things you can do to speed up an I/O-bound program
 
             <img src="img/rocket-turtle.jpg" style="width: 800px; border: none; background: none; box-shadow: none;">
 
-            Get faster disks
-
-            Get a faster network (yay!)
-
-            Compress your input/output
+            - Get faster disks
+            - Get a faster network (yay!)
+            - Compress your input/output
         </script>
     </section>
 </section>
